DmfDirectory can now check if DMFs match the info in their index files.